# StrukturnoProgramiranje2024

./: CMakeLists.txt
Auditoriska1/: 1.1.cpp  1.2.cpp
Auditoriska2/: 2.1.cpp  2.2.cpp  2.3.cpp  2.4.cpp  2.5.cpp  2.6.cpp  2.7.cpp  2.8.cpp
Auditoriska3/: 3.1.cpp  3.2.cpp  3.3.cpp  3.4.cpp  3.5.cpp  3.6.cpp  3.7.cpp  3.8.cpp  3.9.cpp
Auditoriska4/: 4.1.cpp  4.2.cpp  4.3.cpp  4.4.cpp  4.5.cpp  4.6.cpp  4.7.cpp  4.8.cpp
