cmake_minimum_required(VERSION 3.26)
project(StrukturnoProgramiranje2024)

set(CMAKE_CXX_STANDARD 23)

# Executable for 1.1.cpp
add_executable(1.1 Auditoriska1/1.1.cpp)


# Executable for 1.2.cpp
add_executable(1.2 Auditoriska1/1.2.cpp)
add_executable(2.1 Auditoriska2/2.1.cpp)
add_executable(2.2 Auditoriska2/2.2.cpp)
add_executable(2.3 Auditoriska2/2.3.cpp)
add_executable(2.4 Auditoriska2/2.4.cpp)
add_executable(2.5 Auditoriska2/2.5.cpp)
add_executable(2.6 Auditoriska2/2.6.cpp)
#add_executable(2.7 Auditoriska2/2.7.cpp)
#add_executable(2.8 Auditoriska2/2.8.cpp)